--- a/pickasubject.html
+++ b/pickasubject.html
@@ -24,7 +24,7 @@
         <header>
           <article class="container">
               <span class="back"><a href="#"></a></span>
-              <h3 class="title-sub">Level / Subject </h3>
+              <h3 class="title-sub-header">Level / Subject </h3>
               <span class="menu"><a href="#"></a></span>
           </article>
         </header>
@@ -35,16 +35,20 @@
         <article class="main">
             <article class="container">
               <h3 class="title-main">A Level<h3>
-              <a class="btn-subject math" href="#">
+              <a class="btn-subject math math-25" href="#">
                 <span class="icon-math icon-cus"></span>
                 <span class="title-sub">H1 Math</span>
                 <span class="pro-subject"></span>
               </a>
-              <a class="btn-subject math" href="#">
+              <a class="btn-subject math math-50" href="#">
                 <span class="icon-math icon-cus"></span>
                 <span class="title-sub">H1 Math</span>
                 <span class="pro-subject"></span></a>
-              <a class="btn-subject phy" href="#">
+              <a class="btn-subject math math-75" href="#">
+                <span class="icon-math icon-cus"></span>
+                <span class="title-sub">H1 Math</span>
+                <span class="pro-subject"></span></a>
+              <a class="btn-subject phy phy-25" href="#">
                 <span class="icon-phy icon-cus"></span>
                 <span class="title-sub">H1 Physics</span>
                 <span class="pro-subject"></span>
@@ -63,7 +67,12 @@
                 <span class="title-sub">Elementary Maths</span>
                 <span class="pro-subject"></span>
               </a>
-              <a class="btn-subject phy" href="#">
+              <a class="btn-subject phy phy-50" href="#">
+                <span class="icon-phy icon-cus"></span>
+                <span class="title-sub">Elementary Physics</span>
+                <span class="pro-subject"></span>
+              </a>
+              <a class="btn-subject phy phy-75" href="#">
                 <span class="icon-phy icon-cus"></span>
                 <span class="title-sub">Elementary Physics</span>
                 <span class="pro-subject"></span>
