--- a/home.html
+++ b/home.html
@@ -19,26 +19,28 @@
     <![endif]-->
   </head>
   <body>
-    <ul class="list-group">
-      <li class="list-group-item">
-        <a href="home.html">Home</a>
-      </li>
-      <li class="list-group-item">
-        <a href="morepickasubject.html">More Pick A Subject</a>
-      </li>
-      <li class="list-group-item">
-        <a href="pickasubject.html">Pick A Subject</a>
-      </li>
-      <li class="list-group-item">
-        <a href="topic.html">Topic</a>
-      </li>
-      <li class="list-group-item">
-        <a href="topiclist.html">Topic List</a>
-      </li>
-      <li class="list-group-item">
-        <a href="topicscroll.html">Topic Scroll</a>
-      </li>
-    </ul>
+    <section id="home">
+      <section class="page-home">
+        <header class="text-center">
+          <section class="container">
+            <img class="img-responsive col-xs-12" src="images/logo.png" alt="logo-smardy">
+            <a href="#" class="col-xs-12  get-start">get started</a>
+          </section>
+
+        </header>
+
+        <section class="sign-with text-center">
+          <article class="container">
+            <h3>Sign in with</h3>
+            <a href="" class="btn-sign col-xs-12  sign-face">Facebook</a>
+            <a href="" class="btn-sign col-xs-12 sign-google">Google</a>
+          </article>
+
+        </section>
+
+      </section>
+
+    </section>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
