create diffculty and quizzes

--- a/morepickasubject.html
+++ b/morepickasubject.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <section id="pickasubject">
-      <section class="page-pickasubject">
+      <section class="head-cus page-pickasubject">
         <header>
           <article class="container">
               <span class="back"><a href="#"></a></span>
