--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
       <li class="list-group-item">
         <a href="topicscroll.html">Topic Scroll</a>
       </li>
+            <li class="list-group-item">
+        <a href="difficulty.html">Difficulty</a>
+      </li>
+            <li class="list-group-item">
+        <a href="quizzes.html">Quizzes</a>
+      </li>
+            <li class="list-group-item">
+        <a href="quizzes2/10.html">Quizzes 2/10</a>
+      </li>
     </ul>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
