--- a/pickasubject.html
+++ b/pickasubject.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <section id="pickasubject">
-      <section class="page-pickasubject">
+      <section class="head-cus page-pickasubject">
         <header>
           <article class="container">
               <span class="back"><a href="#"></a></span>
