update background and long height

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="quizzes.html">Quizzes</a>
       </li>
             <li class="list-group-item">
-        <a href="quizzes2/10.html">Quizzes 2/10</a>
+        <a href="quizzes2-10.html">Quizzes 2/10</a>
       </li>
     </ul>
     
