--- a/topic.html
+++ b/topic.html
@@ -32,7 +32,7 @@
           <span class="icon-search"><a class="search-btn" href="#"></a></span>
           <input type="text" placeholder="search">
         </article>
-        <article class="main bg-blue">
+        <article class="main bg-blue min-800px">
             <article class="container">
               <a class="btn-subject topic" href="#">
                 <span class="title-topic-list">Introduction to Sequences and Sigma notation </span>
