--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
             <li class="list-group-item">
         <a href="quizzes2/10.html">Quizzes 2/10</a>
       </li>
+            </li>
+            <li class="list-group-item">
+        <a href="signin.html">Sign In Sign Up</a>
+      </li>
+            </li>
+            <li class="list-group-item">
+        <a href="profile.html">Profile menu</a>
+      </li>
     </ul>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
