Create scroll bar with jquery scroll

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             <li class="list-group-item">
         <a href="profile.html">Profile menu</a>
       </li>
+            </li>
+            </li>
+            <li class="list-group-item">
+        <a href="videolist.html">Video List</a>
+      </li
     </ul>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
