update any page

--- a/index.html
+++ b/index.html
@@ -38,32 +38,51 @@
       <li class="list-group-item">
         <a href="topicscroll.html">Topic Scroll</a>
       </li>
-            <li class="list-group-item">
+      <li class="list-group-item">
         <a href="difficulty.html">Difficulty</a>
       </li>
-            <li class="list-group-item">
+      <li class="list-group-item">
         <a href="quizzes.html">Quizzes</a>
       </li>
-            <li class="list-group-item">
+      <li class="list-group-item">
         <a href="quizzes2-10.html">Quizzes 2/10</a>
       </li>
-            </li>
-            <li class="list-group-item">
+      <li class="list-group-item">
         <a href="signin.html">Sign In Sign Up</a>
       </li>
-            </li>
-            <li class="list-group-item">
+
+      <li class="list-group-item">
         <a href="profile.html">Profile menu</a>
       </li>
-            </li>
-            </li>
-            <li class="list-group-item">
-        <a href="videolist.html">Video List</a>
-      </li
+
+      <li class="list-group-item">
+        <a href="videolist.html">Video List (Fixing)</a>
+      </li>
+      <li class="list-group-item">
+        <a href="discussion.html">discussion</a>
+      </li>
+
+      <li class="list-group-item">
+        <a href="discussionthreaddetail.html">discussionthreaddetail</a>
+      </li>
+
+      <li class="list-group-item">
+        <a href="emptypage.html">emptypage.html</a>
+      </li>
+
+      <li class="list-group-item">
+        <a href="friendlist.html">friendlist</a>
+      </li>
+
+      <li class="list-group-item">
+        <a href="profile-a.html">profile-a</a>
+      </li>
+
+
     </ul>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
