--- a/topicscroll.html
+++ b/topicscroll.html
@@ -40,14 +40,14 @@
 
               </a>
                <article style="display:none" class="quizzes-drop">
-                 <a  href="#"  class="quizzes">Quizzes</a>
+                 <a  href="#"  class="quizzes"><i class="icon-topic-challenge"></i>Quizzes</a>
                   <article class="quizzes-left">
-                     <a  href="#" class="btn-default-quizzes videos">Videos</a>
-                      <a  href="#" class="btn-default-quizzes discussion">Discussion</a>
+                     <a  href="#" class="btn-default-quizzes "><i class="videos icon-video"></i>Videos</a>
+                      <a  href="#" class="btn-default-quizzes discussion"><i class="icon-discussion-topic"></i>Discussion</a>
                   </article>
                    <article class="quizzes-right">
-                    <a  href="#" class="btn-default-quizzes difficulty">Difficulty</a>
-                      <a  href="#" class="btn-default-quizzes challenge">Challenge</a>
+                    <a  href="#" class="btn-default-quizzes difficulty"><i class="icon-difficulty-topic"></i>Difficulty</a>
+                      <a  href="#" class="btn-default-quizzes challenge"><i class="icon-challenge-topic"></i>Challenge</a>
                   </article>
                 </article>
               <a class="btn-subject topic" href="#">
@@ -69,7 +69,7 @@
       </section>
     </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script>
