Add new page ranking subscribe settetting and add jquery scroll bar

--- a/ranking.html
+++ b/ranking.html
@@ -28,103 +28,91 @@
         <header>
           <article class="container">
               <span class="back"><a href="#"></a></span>
-              <h3 class="title-sub-header">search friends</h3>
+              <h3 class="title-sub-header">Ranking</h3>
               <span id="nav-expander" class="menu"><a href="#"></a></span>
           </article>
         </header>
-        <article class="search container">
-          <span class="icon-search"><a class="search-btn" href="#"></a></span>
-          <input type="text" placeholder="search">
-        </article>
 
         <article class="main">
             <article class="min-800px container">
-            <article class="friend-li">
+            <article class="ranking-li">
               <img src="images/avatar.png" alt="friend">
-              <article>
-                  <article class="smardy-left">
-                       <span>Lam Nguyen</span>
-                        <span class="point-lst point-smardy-list"><i class="">350</i></span>
-                        <article class="vote-list-smardy">
+              <span>
+                Lam Nguyen<br>
+                <big>Vietnam</big>
+              </span>
+              <button class="btn-ranking">650</button>
+              <button class="ranking-list-smardy">
                           <span class="icon-vote good"></span>
                           <span class="icon-vote good"></span>
                           <span class="icon-vote"></span>
-                        </article>
-                  </article>
-                   <a href="#" class="btn-challenge">challenge</a>
-              </article>
+              </button>
+
             </article>
-            <article class="friend-li">
+            <article class="ranking-li">
               <img src="images/avatar.png" alt="friend">
-              <article>
-                  <article class="smardy-left">
-                       <span>Lam Nguyen</span>
-                        <span class="point-lst point-smardy-list"><i class="">350</i></span>
-                        <article class="vote-list-smardy">
+              <span>
+                Lam Nguyen<br>
+                <big>Vietnam</big>
+              </span>
+              <button class="btn-ranking">650</button>
+              <button class="ranking-list-smardy">
                           <span class="icon-vote good"></span>
                           <span class="icon-vote good"></span>
                           <span class="icon-vote"></span>
-                        </article>
-                  </article>
-                   <a href="#" class="btn-challenge">challenge</a>
-              </article>
+              </button>
+
             </article>
-            <article class="friend-li">
+            <article class="ranking-li">
               <img src="images/avatar.png" alt="friend">
-              <article>
-                  <article class="smardy-left">
-                       <span>Lam Nguyen</span>
-                        <span class="point-lst point-smardy-list"><i class="">350</i></span>
-                        <article class="vote-list-smardy">
+              <span>
+                Lam Nguyen<br>
+                <big>Vietnam</big>
+              </span>
+              <button class="btn-ranking">650</button>
+              <button class="ranking-list-smardy">
                           <span class="icon-vote good"></span>
                           <span class="icon-vote good"></span>
                           <span class="icon-vote"></span>
-                        </article>
-                  </article>
-                   <a href="#" class="btn-challenge">challenge</a>
-              </article>
+              </button>
+
             </article>
-            <article class="friend-li">
+            <article class="ranking-li">
               <img src="images/avatar.png" alt="friend">
-              <article>
-                  <article class="smardy-left">
-                       <span>Lam Nguyen</span>
-                        <span class="point-lst point-smardy-list"><i class="">350</i></span>
-                        <article class="vote-list-smardy">
+              <span>
+                Lam Nguyen<br>
+                <big>Vietnam</big>
+              </span>
+              <button class="btn-ranking">650</button>
+              <button class="ranking-list-smardy">
                           <span class="icon-vote good"></span>
                           <span class="icon-vote good"></span>
                           <span class="icon-vote"></span>
-                        </article>
-                  </article>
-                   <a href="#" class="btn-challenge">challenge</a>
-              </article>
+              </button>
+
             </article>
             </article>
         </article>
       </section>
       <footer>
-        <section class="footer-smardy-list"> 
-          <article class="footer-left active-footer">
-            <span>
-              <i class="footer-icon smardy-icon"></i>
-              smardy
-            </span>
-          </article>
-          <article class="footer-center">
-            <span>
-              <i class="footer-icon face-icon"></i>
-              facebook
-            </span>
-          </article>
-                  <article class="footer-right">
-            <span>
-             <i class="footer-icon contact-icon"></i>
-              contact
-            </span>
-          </article>
-
-        </section>
-
+        <article class="footer-left">
+          <span>
+            <i class="footer-icon smardy-icon"></i>
+            smardy
+          </span>
+        </article>
+        <article class="footer-center">
+          <span>
+            <i class="footer-icon face-icon"></i>
+            facebook
+          </span>
+        </article>
+                <article class="footer-right">
+          <span>
+           <i class="footer-icon contact-icon"></i>
+            contact
+          </span>
+        </article>
       </footer>
     </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
