Add message page and message details page

--- a/message.html
+++ b/message.html
@@ -28,7 +28,7 @@
         <header>
           <article class="container">
               <span class="back"><a href="#"></a></span>
-              <h3 class="title-sub-header">search friends</h3>
+              <h3 class="title-sub-header">message</h3>
               <span id="nav-expander" class="menu"><a href="#"></a></span>
           </article>
         </header>
@@ -39,6 +39,41 @@
 
         <article class="main">
             <article class="min-800px container">
+
+
+
+              <article id="messages-top">
+                  <a class="btn-subject messages-btn" href="#">
+                  <span class="icon-avatar"><img src="images/avatar-mes.png"></span>
+                  <article class="mess-info">
+                    <span class="title-messages-btn status-mes">Keith</span>
+                    <span class="des-messages-btn">Lorem ipsum dolor sit amet</span>
+                  </article>
+                   <span class="mes-ico count-mes">5</span>
+                  </a>
+                  <a class="btn-subject messages-btn" href="#">
+                  <span class="icon-avatar"><img src="images/avatar-mes.png"></span>
+                  <article class="mess-info">
+                    <span class="title-messages-btn status-mes">Keith</span>
+                    <span class="des-messages-btn">Lorem ipsum dolor sit amet</span>
+                  </article>
+                   <span class="mes-ico count-mes">12</span>
+                  </a>
+                  <a class="btn-subject messages-btn" href="#">
+                  <span class="icon-avatar"><img src="images/avatar-mes.png"></span>
+                  <article class="mess-info">
+                    <span class="title-messages-btn">Keith</span>
+                    <span class="des-messages-btn">Lorem ipsum dolor sit amet</span>
+                  </article>
+                   <span class="mes-ico"></span>
+                  </a>
+              </article>
+
+<article id="icon-chat-btn">
+
+  <span class="icon-re-chat"></span>
+</article>
+
             <article class="friend-li">
               <img src="images/avatar.png" alt="friend">
               <article>
@@ -51,7 +86,7 @@
                           <span class="icon-vote"></span>
                         </article>
                   </article>
-                   <a href="#" class="btn-challenge">challenge</a>
+                   <a href="#" class="btn-chat">chat</a>
               </article>
             </article>
             <article class="friend-li">
@@ -66,7 +101,7 @@
                           <span class="icon-vote"></span>
                         </article>
                   </article>
-                   <a href="#" class="btn-challenge">challenge</a>
+                   <a href="#" class="btn-chat">chat</a>
               </article>
             </article>
             <article class="friend-li">
@@ -81,51 +116,14 @@
                           <span class="icon-vote"></span>
                         </article>
                   </article>
-                   <a href="#" class="btn-challenge">challenge</a>
+                   <a href="#" class="btn-chat">chat</a>
               </article>
             </article>
-            <article class="friend-li">
-              <img src="images/avatar.png" alt="friend">
-              <article>
-                  <article class="smardy-left">
-                       <span>Lam Nguyen</span>
-                        <span class="point-lst point-smardy-list"><i class="">350</i></span>
-                        <article class="vote-list-smardy">
-                          <span class="icon-vote good"></span>
-                          <span class="icon-vote good"></span>
-                          <span class="icon-vote"></span>
-                        </article>
-                  </article>
-                   <a href="#" class="btn-challenge">challenge</a>
-              </article>
-            </article>
+
             </article>
         </article>
       </section>
-      <footer>
-        <section class="footer-smardy-list"> 
-          <article class="footer-left active-footer">
-            <span>
-              <i class="footer-icon smardy-icon"></i>
-              smardy
-            </span>
-          </article>
-          <article class="footer-center">
-            <span>
-              <i class="footer-icon face-icon"></i>
-              facebook
-            </span>
-          </article>
-                  <article class="footer-right">
-            <span>
-             <i class="footer-icon contact-icon"></i>
-              contact
-            </span>
-          </article>
-
-        </section>
-
-      </footer>
+    
     </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
