--- a/index.html
+++ b/index.html
@@ -75,12 +75,24 @@
       </li>
 
       <li class="list-group-item">
+        <a href="ranking.html">ranking</a>
+      </li>
+      <li class="list-group-item">
+        <a href="subscribe.html">subscribe</a>
+      </li>
+      <li class="list-group-item">
+        <a href="setting.html">setting</a>
+      </li>
+         <li class="list-group-item">
         <a href="profile-a.html">profile-a</a>
       </li>
-
-
-    </ul>
-    
+               <li class="list-group-item">
+        <a href="messagedetails.html">messagedetails</a>
+      </li>
+               <li class="list-group-item">
+        <a href="message.html">message</a>
+      </li>
+    </ul> 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
