--- a/setting.html
+++ b/setting.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/mediaelementplayer.min.css" rel="stylesheet">
     <link href="css/mejs-skins.css" rel="stylesheet">
