Fix and add new discuss

--- a/discussionew.html
+++ b/discussionew.html
@@ -28,7 +28,7 @@
         <header>
           <article class="container">
               <span class="back"><a href="#"></a></span>
-              <h3 class="title-sub-header">profile</h3>
+              <h3 class="title-sub-header">discussion</h3>
               <span id="nav-expander" class="menu"><a href="#"></a></span>
           </article>
         </header>
@@ -58,82 +58,83 @@
            </nav>
           </section>         
         </article>        
-            
-        <article class="profile-details">
-          <header class="text-center">
-              <img src="images/avatar.png">
-              <h3>Lam Nguyen</h3>
-              <span id="edit-profile"><a href="#"><i class="icon-edit-profile"></i>Edit Profile</a></span>
-          </header>
-          <article id="info-point-friend">
-            <article class="left-profile"><i class="icon-point-profile"></i><span><b>899</b>Point</span></article>
-            <article class="center-profile"><i class="icon-point-ranked"></i><span><b>199th</b>ranked</span></article>
-            <article class="right-profile"><i class="icon-point-friends"></i><span><b>190</b>friends</span></article>
-          </article>
-        </article>
+            <article class="thread-discussion-header">
+                <input placeholder="Tap to create a new thread">
+            </article>
+            <article class="thread-discussion-fitter">
+             <article class="width-670px">
+                <span class="">discussions</span>
+                <span class=""></span>
+            </article>
+            </article> 
         <article class="main">
-            <article class="container min-800px profile-page">
-                <h3>Overal Status</h3>
-                <h4>H2 Maths</h4>
-
-                <article class="completed-profile">
-                  <img src="images/marth.jpg">
-                    <article id="info-com">
-                        <span class="pecent-completed">65%</span>
-                        <span class="status-completed">completed</span>
-                        <article class="star-rate">
-                          <span class="icon-vote good"></span>
-                          <span class="icon-vote good"></span>
-                          <span class="icon-vote"></span>
-                        </article>
-                    </article>
-                  </article>
-                <article id="ratting-circle">
-                  <a href="#" data-toggle="modal" data-target="#myModal">
-                  <span class="understanding understanding-5 ratting-all"></span>
-                  <span class="graphical  graphical-4 ratting-all"></span>
-                  <span class="familiarity  familiarity-5 ratting-all"></span>
-                  <span class="concepts concepts-3 ratting-all"></span>
-                  <span class="application  application-5 ratting-all"></span>
+            <article class="container min-800px thread-discussion-main">
+            <article class="media-discussion width-670px">
+              <article class="media-left">
+                <a href="#">
+                  <img class="media-object" src="images/avatar.png" alt="...">
                 </a>
-                </article>
-                <article id="ratting-guid">
-                  <ul>
-                    <li><i class="color-understanding"></i>Understanding Definition</li>
-                    <li><i class="color-graphical"></i>Graphical Thinking</li>
-                    <li><i class="color-familiarity"></i>Familiarity With Methods</li>
-                    <li><i class="color-concepts"></i>Application Of Concepts</li>
-                    <li><i class="color-application"></i>Application Across Topics</li>
-                  </ul>
-                  <span>Rating 1 ( Weak )  -  5 ( Strong )</span>
-                </article>
+              </article>
+              <article class="media-body discussion-new">
+
+                <h5><span class="title-new-discussion">Is Math difficult?</span>  <span class="count-discussion count-active">30</span></h5>
+                <p>Cras sit amet nibh libero,<span>by Lam Nguyen, posted 5 hours ago</span>
+                  <span class="mes-ico pos"></span>
+                </p>
+              </article>
+              <span class='tab-discuss'>tag: Sequence and Series</span>
+            </article> 
+                  <article class="media-discussion width-670px">
+              <article class="media-left">
+                <a href="#">
+                  <img class="media-object" src="images/avatar.png" alt="...">
+                </a>
+              </article>
+              <article class="media-body discussion-new">
+
+                <h5><span class="title-new-discussion">Is Math difficult?</span>  <span class="count-discussion">30</span></h5>
+                <p>Cras sit amet nibh libero,<span>by Lam Nguyen, posted 5 hours ago</span>
+                  <span class="mes-ico pos"></span>
+                </p>
+              </article>
+              <span class='tab-discuss'>tag: Sequence and Series</span>
+            </article> 
+                        <article class="media-discussion width-670px">
+              <article class="media-left">
+                <a href="#">
+                  <img class="media-object" src="images/avatar.png" alt="...">
+                </a>
+              </article>
+              <article class="media-body discussion-new">
+
+                <h5><span class="title-new-discussion">Is Math difficult?</span>  <span class="count-discussion">30</span></h5>
+                <p>Cras sit amet nibh libero,<span>by Lam Nguyen, posted 5 hours ago</span>
+                  <span class="mes-ico pos"></span>
+                </p>
+              </article>
+              <span class='tab-discuss'>tag: Sequence and Series</span>
+            </article> 
+                        <article class="media-discussion width-670px">
+              <article class="media-left">
+                <a href="#">
+                  <img class="media-object" src="images/avatar.png" alt="...">
+                </a>
+              </article>
+              <article class="media-body discussion-new">
+
+                <h5><span class="title-new-discussion">Is Math difficult?</span>  <span class="count-discussion count-active">30</span></h5>
+                <p>Cras sit amet nibh libero,<span>by Lam Nguyen, posted 5 hours ago</span>
+                  <span class="mes-ico pos"></span>
+                </p>
+              </article>
+              <span class='tab-discuss'>tag: Sequence and Series</span>
+            </article> 
+
+
             </article>
         </article>
-
       </section>
-
     </section>
-
-<!-- Modal -->
-<article class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <article class="modal-dialog">
-    <article class="modal-content">
-      <article class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-       
-      </article>
-      <article class="modal-body">
-        REinforce the concept<br> you are weak at 
-      </article>
-      <article class="modal-footer">
-                <button type="button" class="btn btn-primary">start<br>
-quizzes</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-
-      </article>
-    </article>
-  </article>
-</article>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
