--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
       <li class="list-group-item">
         <a href="quizzes2-10.html">Quizzes 2/10</a>
       </li>
-      <li class="list-group-item">
-        <a href="signin.html">Sign In Sign Up</a>
-      </li>
+
 
       <li class="list-group-item">
         <a href="profile.html">Profile menu</a>
@@ -59,7 +57,7 @@
         <a href="videolist.html">Video List (Fixing)</a>
       </li>
       <li class="list-group-item">
-        <a href="discussion.html">discussion</a>
+        <a href="discussionew.html">discussion</a>
       </li>
 
       <li class="list-group-item">
@@ -84,13 +82,16 @@
         <a href="setting.html">setting</a>
       </li>
          <li class="list-group-item">
-        <a href="profile-a.html">profile-a</a>
+        <a href="profile.html">profile</a>
       </li>
                <li class="list-group-item">
         <a href="messagedetails.html">messagedetails</a>
       </li>
                <li class="list-group-item">
         <a href="message.html">message</a>
+      </li>
+                     <li class="list-group-item">
+        <a href="profile-edit.html">profile-edit</a>
       </li>
     </ul> 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
