--- a/ranking.html
+++ b/ranking.html
@@ -95,6 +95,7 @@
         </article>
       </section>
       <footer>
+        <article class="friend-list-footer">
         <article class="footer-left">
           <span>
             <i class="footer-icon smardy-icon"></i>
@@ -112,6 +113,7 @@
            <i class="footer-icon contact-icon"></i>
             contact
           </span>
+        </article>
         </article>
       </footer>
     </section>
