--- a/topiclist.html
+++ b/topiclist.html
@@ -37,7 +37,7 @@
               <a class="btn-subject topic" href="#">
                 <span class="title-topic">Topic 1: </span>
                 <span class="title-sub">Sequences and Series</span>
-                <span class="topic-subject list"></span>
+                <span class="topic-subject list-detail"></span>
               </a>
               <a class="btn-subject topic" href="#">
                 <span class="title-topic">Topic 2: </span>
