--- a/pickasubject.html
+++ b/pickasubject.html
@@ -38,7 +38,7 @@
               <a class="btn-subject math math-25" href="#">
                 <span class="icon-math icon-cus"></span>
                 <span class="title-sub">H1 Math</span>
-                <span class="pro-subject"></span>
+                <span class="topic-subject math-view-50 math-star-2"></span>
               </a>
               <a class="btn-subject math math-50" href="#">
                 <span class="icon-math icon-cus"></span>
@@ -47,7 +47,7 @@
               <a class="btn-subject phy phy-25" href="#">
                 <span class="icon-phy icon-cus"></span>
                 <span class="title-sub">H1 Physics</span>
-                <span class="pro-subject"></span>
+                <span class="topic-subject math-view-75 math-star-1"></span>
               </a>
               <a class="btn-subject more-btn" href="#">
                 <span class="title-sub">more subjescts</span>
